# MCP-Sentinel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md  action.yml  mcp-sentinel-buildplan.md  pyproject.toml  sentinel.toml
.github/workflows/: ci.yml
artifacts/: README.md  example.sarif  gpt-ablation.json  gpt-static-ablation.json  phase4-action-evidence.md
demo/: README.md
demo/scaffold_target/: pyproject.toml  sentinel.target.yaml  server.py
docs/: demo.md  rule-acceptance.md  rules.md
docs/rules/: SENT-001.md  SENT-002.md  SENT-003.md  SENT-004.md  SENT-005.md  SENT-006.md  SENT-007.md
schemas/: README.md  finding.schema.json  gpt-review.schema.json  report.schema.json
scripts/: README.md  __init__.py  capture_gpt_reviews.py  generate_gpt_static_ablation.py  generate_phase5_artifacts.py  generate_third_party_notices.py  reap_orphans.py  run_github_action.py  smoke_wheel.py
src/sentinel/: __init__.py  __main__.py  cli.py  config.py  errors.py  finding.py  orchestrator.py  owasp_mapping.py  permissions.py  schema.py
src/sentinel/_cassettes/: README.md
src/sentinel/dynamic/: __init__.py  catalog.py  merge.py  prober.py  sandbox.py
src/sentinel/llm/: __init__.py  cache.py  context.py  gpt-5.6-pricing.json  schema.py  semantic_reviewer.py  tools.py
src/sentinel/report/: __init__.py  console.py  json_report.py  model.py  sarif.py  validate_json.py  validate_sarif.py
src/sentinel/static/: __init__.py  ast_utils.py  catalog.py  engine.py  model.py  semgrep_adapter.py  traversal.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_dynamic_prober.py  test_dynamic_sandbox.py  test_finding.py  test_github_action.py  test_gpt_review.py  test_orchestrator.py  test_phase3_capture.py  test_report.py  test_sarif.py  test_static_engine.py
tests/evals/: README.md  gpt_review_cases.yaml
tests/fixtures/clean_server/: pyproject.toml  sentinel.integrity.yaml  sentinel.permissions.yaml  sentinel.toml  server.py  tools.yaml
tests/fixtures/gpt_review_eval/: pyproject.toml  sentinel.permissions.yaml  sentinel.target.yaml  server.py  storage.py  tools.yaml
tests/fixtures/vulnerable_server/: pyproject.toml  sentinel.permissions.yaml  server.py  (+2 more)
(+15 files in other folders)
