[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "Build-time security scanner for MCP servers"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.25.1,<5",
  "openai==2.46.0",
  "packaging>=25.0,<26",
  "pathspec>=1.1.1,<2",
  "platformdirs>=4.10.0,<5",
  "pydantic>=2.13.4,<3",
  "PyYAML>=6.0.3,<7",
  "sarif-om>=1.0.4,<2",
  "semgrep==1.170.0",
  "tiktoken>=0.12.0,<1",
  "typer>=0.27.0,<1",
  "tomli>=2.4.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "build>=1.5.0,<2",
  "mypy>=1.20.2,<2",
  "pip-audit>=2.10.1,<3",
  "pytest>=8.4.2,<9",
  "pytest-cov>=6.3.0,<7",
  "ruff>=0.15.22,<1",
  "types-jsonschema>=4.26.0.20260518,<5",
  "types-PyYAML>=6.0.12.20260518,<7",
  "uv==0.8.22",
]

[project.urls]
Repository = "https://github.com/BashaarJavaid/MCP-Sentinel"

[project.scripts]
sentinel = "sentinel.cli:app"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/schemas",
  "/LICENSE",
  "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "sentinel/_schemas"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/sentinel/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
exclude = ["tests/fixtures/gpt_review_eval/server.py"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests", "scripts"]
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["sarif_om", "sarif_om.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=sentinel --cov-branch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["sentinel"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
